# solana-explorer-cli

./: Cargo.toml  Makefile  README.md  ROADMAP.md
src/: account.rs  main.rs  output.rs  page.rs  rpc.rs  transaction.rs
src/account/: mod.rs  reader.rs
src/balance/: mod.rs
src/magiceden/: cm.rs
src/metaplex/: core.rs  das.rs  mod.rs
src/pretty/: mod.rs  public_key.rs  string.rs
src/token/: mod.rs
tests/: accounts_test.sh  setup.sh  transactions_test.sh
