[package]
name = "solana-explorer-cli"
version = "0.3.3"
edition = "2021"
authors = ["Dmitry Shvetsov <shvetsovdm+solana-explorer-cli@gmail.com>"]
license = "MIT"
description = "Solana blockchain CLI state explorere. The best way to explore Solana blockchain state from your terminal."
readme = "README.md"
homepage = "https://github.com/dmshvetsov/solana-explorer-cli"
repository = "https://github.com/dmshvetsov/solana-explorer-cli"
keywords = ["cli", "solana", "state", "explorer"]
categories = ["command-line-utilities"]

[[bin]]
name = "se"
path = "src/main.rs"

[dependencies]
borsh = "=0.10.3"
clap = { version = "4.5.7", features = ["derive"] }
mpl-core = "0.8.1-beta.1"
mpl-token-metadata = { version = "5.1.0", features = ["serde"] }
serde = "1.0.203"
serde_json = "1.0.117"
solana-account-decoder-client-types = "2.1.7"
solana-client = "2.1.6"
solana-sdk = "2.1.6"
solana-transaction-status = "2.1.6"
spl-token = "7.0.0"
